[gd_scene load_steps=26 format=2]

[ext_resource path="res://characters/enemies/enemy.gd" type="Script" id=1]
[ext_resource path="res://assets/enemies/skeleton/0-0.PNG" type="Texture" id=2]
[ext_resource path="res://assets/enemies/skeleton/0-1.PNG" type="Texture" id=3]
[ext_resource path="res://assets/enemies/skeleton/0-2.PNG" type="Texture" id=4]
[ext_resource path="res://assets/enemies/skeleton/0-3.PNG" type="Texture" id=5]
[ext_resource path="res://assets/enemies/skeleton/5-3.PNG" type="Texture" id=6]
[ext_resource path="res://assets/enemies/skeleton/5-2.PNG" type="Texture" id=7]
[ext_resource path="res://assets/enemies/skeleton/5-4.PNG" type="Texture" id=8]
[ext_resource path="res://assets/enemies/skeleton/5-0.PNG" type="Texture" id=9]
[ext_resource path="res://assets/enemies/skeleton/5-5.PNG" type="Texture" id=10]
[ext_resource path="res://assets/enemies/skeleton/5-1.PNG" type="Texture" id=11]
[ext_resource path="res://assets/enemies/skeleton/10-0.PNG" type="Texture" id=12]
[ext_resource path="res://characters/enemies/skeleton/SpriteHandler.gd" type="Script" id=13]
[ext_resource path="res://assets/enemies/skeleton/6-1.PNG" type="Texture" id=14]
[ext_resource path="res://assets/enemies/skeleton/6-2.PNG" type="Texture" id=15]
[ext_resource path="res://assets/ui/hud/action_bar.png" type="Texture" id=16]
[ext_resource path="res://assets/ui/hud/empty_bar_decoration.png" type="Texture" id=17]
[ext_resource path="res://assets/ui/hud/health_bar.png" type="Texture" id=18]
[ext_resource path="res://assets/ui/hud/speed_bar.png" type="Texture" id=19]
[ext_resource path="res://assets/ui/hud/magic_bar.png" type="Texture" id=20]
[ext_resource path="res://sounds/weapons/Magnus_attack2.mp3.wav" type="AudioStream" id=21]
[ext_resource path="res://sounds/weapons/Magnus_attack1.mp3.wav" type="AudioStream" id=22]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 9 ), ExtResource( 11 ), ExtResource( 7 ), ExtResource( 6 ), ExtResource( 8 ), ExtResource( 10 ) ],
"loop": false,
"name": "attack_00",
"speed": 6.0
}, {
"frames": [ ExtResource( 14 ), ExtResource( 15 ) ],
"loop": true,
"name": "block",
"speed": 2.0
}, {
"frames": [ ExtResource( 12 ), null, ExtResource( 12 ), null, ExtResource( 12 ), null ],
"loop": false,
"name": "die",
"speed": 2.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "idle",
"speed": 4.0
} ]

[sub_resource type="BoxShape" id=4]

[sub_resource type="BoxShape" id=5]

[node name="Skeleton" type="Spatial"]
script = ExtResource( 1 )

[node name="Enemy" type="KinematicBody" parent="."]

[node name="SpriteHandler" type="Spatial" parent="Enemy"]
script = ExtResource( 13 )

[node name="AnimatedSprite3D" type="AnimatedSprite3D" parent="Enemy/SpriteHandler"]
transform = Transform( 1.2, 0, 0, 0, 1.2, 0, 0, 0, 1, 0.2, -0.25, 0.8 )
billboard = 2
double_sided = false
frames = SubResource( 3 )
animation = "idle"
frame = 3
playing = true

[node name="HurtBox" type="CollisionShape" parent="Enemy"]
shape = SubResource( 4 )

[node name="BlockBox" type="CollisionShape" parent="Enemy"]
shape = SubResource( 4 )
disabled = true

[node name="Attacks" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 2 )

[node name="LeftHitBox" type="CollisionShape" parent="Attacks"]
transform = Transform( 0.1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 0, 0 )
shape = SubResource( 5 )
disabled = true

[node name="RightHitBox" type="CollisionShape" parent="Attacks"]
transform = Transform( 0.1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0, 0 )
shape = SubResource( 5 )
disabled = true

[node name="HUD" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="EnemyData" type="HBoxContainer" parent="HUD"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -174.0
margin_right = -116.0
margin_bottom = 68.0
rect_scale = Vector2( 3, 2 )

[node name="Attributes" type="VBoxContainer" parent="HUD/EnemyData"]
margin_right = 58.0
margin_bottom = 68.0
custom_constants/separation = 0

[node name="Hp" type="TextureProgress" parent="HUD/EnemyData/Attributes"]
margin_right = 58.0
margin_bottom = 17.0
value = 100.0
texture_under = ExtResource( 17 )
texture_progress = ExtResource( 18 )
fill_mode = 1

[node name="Ap" type="TextureProgress" parent="HUD/EnemyData/Attributes"]
margin_top = 17.0
margin_right = 58.0
margin_bottom = 34.0
value = 100.0
texture_under = ExtResource( 17 )
texture_progress = ExtResource( 16 )
fill_mode = 1

[node name="Mp" type="TextureProgress" parent="HUD/EnemyData/Attributes"]
margin_top = 34.0
margin_right = 58.0
margin_bottom = 51.0
value = 100.0
texture_under = ExtResource( 17 )
texture_progress = ExtResource( 20 )
fill_mode = 1

[node name="Sp" type="TextureProgress" parent="HUD/EnemyData/Attributes"]
margin_top = 51.0
margin_right = 58.0
margin_bottom = 68.0
value = 100.0
texture_under = ExtResource( 17 )
texture_progress = ExtResource( 19 )
fill_mode = 1

[node name="Audio" type="Node" parent="."]

[node name="Attacks" type="Node" parent="Audio"]

[node name="Attack_00" type="AudioStreamPlayer" parent="Audio/Attacks"]
stream = ExtResource( 22 )
pitch_scale = 0.8

[node name="Attack_01" type="AudioStreamPlayer" parent="Audio/Attacks"]
stream = ExtResource( 21 )
pitch_scale = 0.8

[connection signal="animation_finished" from="Enemy/SpriteHandler/AnimatedSprite3D" to="." method="_on_AnimatedSprite3D_animation_finished"]
[connection signal="body_entered" from="Attacks" to="." method="_on_Attacks_body_entered"]
